@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/exifr
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.18 2011/02/23 19:32:35 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.19 2011/02/23 19:35:54 graaff Exp $
+
+*exifr-1.0.4 (23 Feb 2011)
+
+  23 Feb 2011; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.4.ebuild:
+  Version bump.
 
   23 Feb 2011; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.1.ebuild,
   -exifr-1.0.2.ebuild:
